# exstruct

./: README.md  pyproject.toml
src/dbclient/: __init__.py  _base_client.py  _sql.py  base_client.py  no_sql.py  sql.py
src/exstruct/: __init__.py  _base_exstruct.py  _json_exstruct.py  _xml_exstruct.py  base_exstruct.py  csv_exstruct.py  json_exstruct.py  xml_exstruct.py  xsd_exstruct.py
src/exstruct/adapter/: __init__.py  base_adapter.py
src/exstruct/dbclient/: __init__.py  _base_client.py  _no_sql.py  _sql.py
src/exstruct/exstruct/: __init__.py  _base_exstruct.py  _csv_exstruct.py  _json_exstruct.py  _xml_exstruct.py  _xsd_exstruct.py
src/exstruct/extractor/: __init__.py  _extractor.py
src/exstruct/orm/: __init__.py  _constructor.py  _generator.py
src/exstruct/orm/templates/: table_classes.py.jinja
src/exstruct/parsers/: __init__.py  _api_parser.py  _base_parser.py  _ftp_parser.py  _web_parser.py
src/exstruct/util/: __init__.py  _util.py
src/extractor/: _extractor.py  extractor.py
src/orm/: __init__.py  _constructor.py  constructor.py  generator.py
src/parser/: api_parser.py  base_parser.py  ftp_parser.py  web_parser.py
src/parsers/: __init__.py  _base_parser.py  _ftp_parser.py
src/util/: _util.py
test/parsers/: test_ftp.py
