[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
linter = [
    "black>=23.1.0",
]
test = [
    "pytest>=7.2.1",
]

[project]
name = "exstruct"
version = "0.1.0"
description = """\
    Library for processing hierarchical tree-like data sturctures (documents like XML and JSON) and loading them in databases for further processing and analysis"""
authors = [
    {name = "Kirill Sukhorukov", email = "sukhorukov.k.e@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
