[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
linter = [
    "black>=23.1.0",
]
test = [
    "pytest>=7.2.1",
]

[project]
name = "exstruct"
version = "0.1.0"
description = """\
    Library for processing hierarchical tree-like data sturctures (documents like XML and JSON) and loading them in databases for further processing and analysis"""
authors = [
    {name = "Kirill Sukhorukov", email = "sukhorukov.k.e@gmail.com"},
]
dependencies = [
    "more-itertools>=9.0.0",
    "SQLAlchemy>=2.0.3",
    "tenacity>=8.2.1",
    "pymongo>=4.3.3",
    "Jinja2>=3.1.2",
    "deepdiff>=6.2.3",
    "aioftp>=0.21.4",
    "async-timeout>=4.0.2",
    "aiohttp>=3.8.4",
    "flatdict>=4.0.1",
    "xmlschema>=2.2.1",
    "jsonschema>=4.17.3",
    "paramiko>=3.0.0",
    "python-dateutil>=2.8.2",
    "setuptools>=67.6.0",
    "u-msgpack-python>=2.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]